# advent2024

./: .gitignore  README.md  noxfile.py  pyproject.toml
src/advent/: day1.py  day2.py  day3.py  main.py  profile.py
tests/: test_day1.py  test_day2.py  test_day3.py
